Use Java 17 syntax and semantics