@@ -2,7 +2,6 @@ package org.codehaus.plexus.archiver;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.eclipse.sisu.launch.InjectedTest;
 import org.junit.jupiter.api.AfterEach;
@@ -25,7 +24,7 @@ public abstract class TestSupport extends InjectedTest {
     }
 
     private static Path basedir() {
-        return Paths.get(System.getProperty("basedir", (new File("")).getAbsolutePath()));
+        return Path.of(System.getProperty("basedir", (new File("")).getAbsolutePath()));
     }
 
     protected static File getTestFile(final String path) {
